--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
     <div class="container">
@@ -17,6 +17,10 @@
           <h2 class="display-2">Scene It</h2>
           <p>Search for movies you want to watch.</p>
           <p>Save them to your list</p>
+          <form action="./watchlist.html">
+            <input type="submit" value="Go to my watchlist" />
+          </form>
+          <br>
         </div>
       </div>
       <div class="row">
